--- a/style.css
+++ b/style.css
@@ -159,3 +159,596 @@ footer {
 h1 {
   margin: 0% 0% 0% 40%;
 }
+
+@media (max-width: 1680px) {
+  .primenome {
+    padding: 10px 95px;
+    background-color: #edf8fc;
+  }
+
+  .data {
+    margin: -4.2% 0% 0% 30%;
+  }
+
+  .primedata {
+    margin: 0.1% 0% 0% 30%;
+    padding: 10px 94px;
+    background-color: #edf8fc;
+  }
+  .cpf {
+    margin: -3.9% 0% 0% 60%;
+  }
+  .primecpf {
+    margin: -0.2% 0% 0% 60%;
+    padding: 10px 90px;
+    background-color: #edf8fc;
+  }
+  .alert {
+    margin: 2% 0% 1% 0%;
+    width: 1328px;
+    height: 50px;
+    flex-shrink: 0;
+    border-radius: 12px;
+    background: #ffd6b0;
+  }
+  .alertext {
+    margin: -3% 0% 2% 30%;
+  }
+  .primeprof {
+    padding: 10px 543px;
+    margin: 0.2% 0% 0% 0%;
+  }
+  .form-control {
+    margin: 2% 0% 0% 0%;
+    padding: 10px 230px;
+  }
+  .procedimento {
+    margin: -4.1% 0% 0% 45.4%;
+    color: #333333;
+  }
+  .proce {
+    margin: 0% 0% 0% 45.4%;
+    padding: 10px 230px;
+  }
+  .ano {
+    margin: 1.5% 0% 0% 0%;
+  }
+
+  .dia {
+    padding: 10px 246px;
+  }
+  .hora {
+    margin: -4.3% 0% 0% 45%;
+  }
+
+  .hr {
+    padding: 10px 279px;
+    margin: 0% 0% 0% 45%;
+  }
+  .clinica {
+    margin: 1% 0% 1% 66.3%;
+  }
+  .listagem {
+    margin: 1% 0% 1% 1%;
+  }
+}
+@media (max-width: 1280px) {
+  .primenome {
+    padding: 10px 50px;
+    background-color: #edf8fc;
+  }
+
+  .data {
+    margin: -5.2% 0% 0% 30%;
+  }
+
+  .primedata {
+    margin: 0% 0% 0% 30%;
+    padding: 10px 50px;
+    background-color: #edf8fc;
+  }
+  .cpf {
+    margin: -5% 0% 0% 60%;
+  }
+  .primecpf {
+    margin: -0.2% 0% 0% 60%;
+    padding: 10px 50px;
+    background-color: #edf8fc;
+  }
+  .alert {
+    margin: 2% 0% 1% 0%;
+    width: 1050px;
+    height: 50px;
+    flex-shrink: 0;
+    border-radius: 12px;
+    background: #ffd6b0;
+  }
+  .alertext {
+    margin: -4% 0% 2% 30%;
+  }
+  .primeprof {
+    padding: 10px 404px;
+    margin: 0.2% 0% 0% 0%;
+  }
+  .form-control {
+    margin: 2% 0% 0% 0%;
+    padding: 10px 160px;
+  }
+  .procedimento {
+    margin: -5.2% 0% 0% 45.4%;
+    color: #333333;
+  }
+  .proce {
+    margin: 0% 0% 0% 45.4%;
+    padding: 10px 160px;
+  }
+  .ano {
+    margin: 1.5% 0% 0% 0%;
+  }
+
+  .dia {
+    padding: 10px 175px;
+  }
+  .hora {
+    margin: -5.3% 0% 0% 45%;
+  }
+
+  .hr {
+    padding: 10px 208px;
+    margin: 0% 0% 0% 45%;
+  }
+  .clinica {
+    margin: 1% 0% 1% 62%;
+  }
+  .listagem {
+    margin: 1% 0% 1% 1%;
+  }
+  .salvar {
+    padding: 12px 50px;
+    margin: 2% 0% 1% 79%;
+  }
+  footer {
+    padding: 20px;
+  }
+  h1 {
+    margin: 1% 0% 0% 40%;
+  }
+}
+@media (max-width: 884px) {
+  .voltar {
+    margin: 4% 0% 10% 8%;
+  }
+  .primenome {
+    padding: 8px 0.1px;
+    background-color: #edf8fc;
+  }
+
+  .data {
+    margin: -7% 0% 0% 32.5%;
+  }
+
+  .primedata {
+    margin: 0% 0% 0% 32.5%;
+    padding: 8px 1px;
+    background-color: #edf8fc;
+  }
+  .cpf {
+    margin: -7% 0% 0% 65%;
+  }
+  .primecpf {
+    margin: -0.2% 0% 0% 65%;
+    padding: 8px 1px;
+    background-color: #edf8fc;
+  }
+  .alert {
+    width: 774px;
+    height: 45px;
+    margin: 5% 0% 5% 0%;
+  }
+  .alertext {
+    margin: -9% 0% 8% 23%;
+  }
+  .primeprof {
+    padding: 10px 265px;
+    margin: 0.2% 0% 5% 0%;
+  }
+  .form-control {
+    margin: 2% 0% 0% 0%;
+    padding: 10px 92px;
+  }
+  .procedimento {
+    margin: -7.6% 0% 0% 49%;
+  }
+  .proce {
+    margin: 0% 0% 5% 49%;
+    padding: 10px 92px;
+  }
+  .ano {
+    margin: 1.5% 0% 0% 0%;
+  }
+
+  .dia {
+    padding: 10px 105px;
+  }
+  .hora {
+    margin: -8% 0% 0% 49%;
+  }
+
+  .hr {
+    padding: 10px 137px;
+    margin: 0% 0% 3% 49%;
+  }
+  .clinica {
+    margin: 1% 0% 1% 55%;
+  }
+  .listagem {
+    margin: 1% 0% 1% 1%;
+  }
+  .salvar {
+    padding: 12px 50px;
+    margin: 5% 0% 5% 79%;
+  }
+  footer {
+    padding: 50px;
+  }
+  h1 {
+    margin: 1% 0% 0% 36%;
+  }
+}
+@media (max-width: 800px) {
+  .voltar {
+    margin: 7% 0% 10% 8%;
+  }
+  .nome {
+    margin: 1% 0% 0% -6%;
+  }
+  .primenome {
+    padding: 8px 0px;
+    margin: 1% 0% 0% -6%;
+  }
+
+  .data {
+    margin: -7.7% 0% 0% 29%;
+  }
+
+  .primedata {
+    margin: 0% 0% 0% 29%;
+    padding: 8px 0px;
+  }
+  .cpf {
+    margin: -7.8% 0% 0% 64%;
+  }
+  .primecpf {
+    margin: -0.2% 0% 0% 64%;
+    padding: 8px 0px;
+  }
+  .alert {
+    width: 755px;
+    height: 45px;
+    margin: 8% 0% 8% -6%;
+  }
+  .alertext {
+    margin: -12% 0% 10% 18%;
+  }
+  .prof {
+    margin: 0% 0% 0% -6%;
+  }
+  .primeprof {
+    padding: 10px 255px;
+    margin: 0.2% 0% 5% -6%;
+  }
+  .tipo {
+    margin: 0% 0% 0% -6%;
+  }
+  .form-control {
+    margin: 0% 0% 0% -6%;
+    padding: 10px 80px;
+  }
+  .procedimento {
+    margin: -8% 0% 0% 49%;
+  }
+  .proce {
+    margin: 0% 0% 5% 49%;
+    padding: 10px 80px;
+  }
+  .ano {
+    margin: 0% 0% 0% -6%;
+  }
+
+  .dia {
+    margin: 0% 0% 0% -6%;
+    padding: 10px 95px;
+  }
+  .hora {
+    margin: -9% 0% 0% 49%;
+  }
+
+  .hr {
+    padding: 10px 125px;
+    margin: 0% 0% 3% 49%;
+  }
+  .clinica {
+    margin: 1% 0% 1% 52%;
+  }
+  .listagem {
+    margin: 1% 0% 1% 1%;
+  }
+  .salvar {
+    padding: 12px 50px;
+    margin: 10% 0% 13% 79%;
+  }
+  footer {
+    padding: 70px;
+  }
+  h1 {
+    margin: 1% 0% 0% 36%;
+  }
+}
+@media (max-width: 834px) {
+  .clinica {
+    margin: 1% 0% 1% 52%;
+  }
+  .listagem {
+    margin: 1% 0% 1% 1%;
+  }
+  .voltar {
+    margin: 7% 0% 10% 2%;
+  }
+  .nome {
+    margin: 1% 0% 0% -6%;
+  }
+  .primenome {
+    padding: 8px 0px;
+    margin: 1% 0% 0% -6%;
+  }
+
+  .data {
+    margin: -7.7% 0% 0% 29%;
+  }
+
+  .primedata {
+    margin: 0% 0% 0% 29%;
+    padding: 8px 0px;
+  }
+  .cpf {
+    margin: -7.8% 0% 0% 64%;
+  }
+  .primecpf {
+    margin: -0.2% 0% 0% 64%;
+    padding: 8px 0px;
+  }
+  .alert {
+    width: 775px;
+    height: 45px;
+    margin: 8% 0% 8% -6%;
+  }
+  .alertext {
+    margin: -12% 0% 10% 18%;
+  }
+  .prof {
+    margin: 0% 0% 0% -6%;
+  }
+  .primeprof {
+    padding: 10px 266px;
+    margin: 0.2% 0% 5% -6%;
+  }
+  .tipo {
+    margin: 0% 0% 0% -6%;
+  }
+  .form-control {
+    margin: 0% 0% 0% -6%;
+    padding: 10px 80px;
+  }
+  .procedimento {
+    margin: -8% 0% 0% 49%;
+  }
+  .proce {
+    margin: 0% 0% 5% 49%;
+    padding: 10px 80px;
+  }
+  .ano {
+    margin: 0% 0% 0% -6%;
+  }
+
+  .dia {
+    margin: 0% 0% 0% -6%;
+    padding: 10px 95px;
+  }
+  .hora {
+    margin: -9% 0% 0% 49%;
+  }
+
+  .hr {
+    padding: 10px 125px;
+    margin: 0% 0% 3% 49%;
+  }
+  .salvar {
+    padding: 12px 50px;
+    margin: 10% 0% 8% 79%;
+  }
+  footer {
+    padding: 42px;
+  }
+  h1 {
+    margin: 1% 0% 0% 33%;
+  }
+}
+@media (max-width: 768px) {
+  .clinica {
+    margin: 1% 0% 1% 50%;
+  }
+  .listagem {
+    margin: 1% 0% 1% 1%;
+  }
+  .alert {
+    width: 734px;
+  }
+  .alertext {
+    margin: -12% 0% 10% 13%;
+  }
+  .prof {
+    margin: 0% 0% 0% -6%;
+  }
+  .primeprof {
+    padding: 10px 244px;
+    margin: 0.2% 0% 5% -6%;
+  }
+  .salvar {
+    padding: 12px 50px;
+    margin: 2% 0% 2% 79%;
+  }
+  footer {
+    padding: 18px;
+  }
+  h1 {
+    margin: 1% 0% 0% 39%;
+    font-size: 18px;
+  }
+}
+@media (max-width: 428px) {
+  .clinica {
+    margin: 1% 0% 1% 5%;
+  }
+  .listagem {
+    margin: 1% 0% 1% 1%;
+  }
+  .primenome {
+    padding: 10px 80px;
+    margin: 1% 0% 3% -6%;
+  }
+
+  .data {
+    margin: 1% 0% 3% -6%;
+  }
+
+  .primedata {
+    margin: 1% 0% 0% -6%;
+    padding: 10px 80px;
+  }
+  .cpf {
+    margin: 0% 0% 0% -26%;
+    padding: 10px 80px;
+  }
+  .primecpf {
+    margin: 0% 0% 0% -6%;
+    padding: 10px 80px;
+  }
+  .alert {
+    margin: 7% 0% 3% -6%;
+    width: 402px;
+  }
+  .alertext {
+    margin: -13% 0% 7% -3%;
+  }
+  .primeprof {
+    padding: 10px 79px;
+    margin: 0.2% 0% 8% -6%;
+  }
+  .form-control {
+    margin: 2% 0% 7% -6%;
+    padding: 10px 107px;
+  }
+  .procedimento {
+    margin: 0% 0% 0% -6%;
+    color: #333333;
+  }
+  .proce {
+    margin: 0% 0% 7% -6%;
+    padding: 10px 107px;
+  }
+  .ano {
+    margin: 3% 0% 0% -6%;
+  }
+
+  .dia {
+    padding: 10px 120px;
+  }
+  .hora {
+    margin: 6cqw 0% 0% -6%;
+  }
+
+  .hr {
+    padding: 10px 152px;
+    margin: 0% 0% 4% -6%;
+  }
+  .salvar {
+    padding: 12px 50px;
+    margin: 4% 0% 4% 60%;
+  }
+  footer {
+    padding: 10px;
+  }
+  h1 {
+    margin: 1% 0% 0% 30%;
+    font-size: 14px;
+  }
+}
+@media (max-width: 360px) {
+  .clinica {
+    margin: 1% 0% 1% 4%;
+    padding: 10px 10px;
+  }
+  .listagem {
+    margin: 1% 0% 1% 1%;
+    padding: 10px 10px;
+  }
+  .primenome {
+    padding: 10px 50px;
+    margin: 1% 0% 3% -6%;
+  }
+
+  .data {
+    margin: 1% 0% 3% -6%;
+  }
+
+  .primedata {
+    margin: 1% 0% 0% -6%;
+    padding: 10px 50px;
+  }
+  .cpf {
+    margin: 0% 0% 0% -30%;
+  }
+  .primecpf {
+    margin: 0% 0% 0% -6%;
+    padding: 10px 50px;
+  }
+  .alert {
+    width: 343px;
+  }
+  .alertext {
+    margin: -15% 0% 7% -3%;
+  }
+  .primeprof {
+    padding: 10px 50px;
+    margin: 0.2% 0% 8% -6%;
+  }
+  .form-control {
+    margin: 2% 0% 7% -6%;
+    padding: 10px 78px;
+  }
+  .procedimento {
+    margin: 0% 0% 0% -6%;
+  }
+  .proce {
+    padding: 10px 78px;
+  }
+  .ano {
+    margin: 3% 0% 0% -6%;
+  }
+
+  .dia {
+    padding: 10px 91px;
+  }
+  .hora {
+    margin: 6cqw 0% 0% -6%;
+  }
+
+  .hr {
+    padding: 10px 122px;
+    margin: 0% 0% 4% -6%;
+  }
+  .salvar {
+    padding: 12px 50px;
+    margin: 4% 0% 6% 54%;
+  }
+}
